# LinkAnchor

./: .gitignore  .gitmodules  README.md  pyproject.toml
bench/: bench_ealink.py  data_gen.py  ealink.py  practical.py
prior-works/: .gitignore  README.md
prior-works/autofl/: .gitignore  pyproject.toml  runner.sh
src/: cherk.py  git_anchor.py  issue_wrapper.py  main.py  message.py  prompt.py  term.py  tools.py
src/anchor/: agent.py  anchor.py  extractor.py  metrics.py
src/code-wrapper/: Cargo.toml  pyproject.toml  setup_test_codebase.sh
src/code-wrapper/scripts/: setup_test_codebase.sh
src/code-wrapper/src/: cherk.rs  code.rs  error.rs  lib.rs  query.rs  ts.rs  wrapper.rs
src/code-wrapper/src/ts/: go.rs  java.rs  mod.rs  python.rs
src/code-wrapper/src/ts/test/: mod.rs
src/code-wrapper/src/ts/test/samples/: code.go  code.java  code.py
src/git-wrapper/: Cargo.toml  pyproject.toml  setup_test_repo.sh
src/git-wrapper/src/: branchless.rs  error.rs  lib.rs  wrapper.rs
src/issue_wrapper/: __init__.py  github.py  jira.py  wrapper.py
src/schema/: code.py  control.py  git.py  issue.py
