[project]
name = "git-anchor"
version = "0.1.0"
description = ""
authors = [
    {name = "ArshiAAkhavan",email = "letmemakenewone@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.70.0,<2.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "maturin (>=1.8.3,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pygithub (>=2.6.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "git-anchor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
