[project]
name = "git-anchor"
version = "0.1.0"
description = ""
authors = [
    {name = "ArshiAAkhavan",email = "letmemakenewone@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.70.0,<2.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "maturin (>=1.8.3,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pygithub (>=2.6.1,<3.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "py7zr (>=0.22.0,<0.23.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "patchelf (>=0.17.2.2,<0.18.0.0)",
]
