[tool.poetry]
name = "autofl"
version = "0.1.0"
description = ""
authors = ["ArshiAAkhavan <letmemakenewone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = ">=0.27.8,<=0.28.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
tqdm = "^4.67.1"
markdown2 = "^2.5.3"
tiktoken = "^0.9.0"
javalang-ext = "^0.14.3"
scipy = "^1.15.2"
numpy = "^2.2.3"
matplotlib = "^3.10.1"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
