[package]
name = "code-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "code_wrapper"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
tree-sitter = "0.25"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
walkdir = "2"
strfmt = "0.2"
